# IPinfo

./: .gitignore  README.md  ipinfo.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yaml  tests.yml
src/ipinfo/: __main__.py  __main__.py~  ipinfo_test.py~  sites.py  trysites.py  trysites.py~
src/ipinfo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ipinfo/ipinfo.egg-info/: PKG-INFO
tests/: .coverage  test_ipinfo.py  test_ipinfo.py~
