[metadata]
name = ipinfo
decription = A program that gives data about your IP
license = apache
license_files = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=4.0
    mypy>=1.1
    tox>=4.4
    flake8>=6.0
[options]
packages =
    ipinfo
install_requires =
    requests
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
console_scripts =
    ipinfo = ipinfo.__main__:main
